package com.java.genetic;

public class DNAException extends Exception {

    public DNAException(String message) {
        super(message);
    }
}