@startuml

title __GENETIC's Class Diagram__\n

  package  {
    package com.java.genetic {
      abstract class Brin {
          - strand : ArrayList<Nucleotide>
          + toString()
          + getStrand()
      }
    }
  }
  

  package  {
    package com.java.genetic {
      class Codon {
          - symbol : String
          - trigram : String
          - name : String
          + Codon()
          + getSymbol()
          + getTrigram()
          + getName()
          + toString()
      }
    }
  }
  

  package  {
    package com.java.genetic {
      class DNA {
          + DNA()
          + DNA()
          + getComplementary()
          + transcription()
      }
    }
  }
  

  package  {
    package com.java.genetic {
      class DNAException {
          + DNAException()
      }
    }
  }
  

  package  {
    abstract class PrintStreamOrWriter {
        - PrintStreamOrWriter()
        {abstract} ~ lock()
        {abstract} ~ println()
    }
  }
  

  package  {
    class SentinelHolder {
        {static} + STACK_TRACE_ELEMENT_SENTINEL : StackTraceElement
        {static} + STACK_TRACE_SENTINEL : StackTraceElement[]
        - SentinelHolder()
    }
  }
  

  package  {
    class WrappedPrintStream {
        - printStream : PrintStream
        ~ WrappedPrintStream()
        ~ lock()
        ~ println()
    }
  }
  

  package  {
    class WrappedPrintWriter {
        - printWriter : PrintWriter
        ~ WrappedPrintWriter()
        ~ lock()
        ~ println()
    }
  }
  

  package  {
    package com.java.genetic {
      class DNARepository {
          + load()
          + getDNA()
          {static} + generateRandomDNAFile()
      }
    }
  }
  

  package  {
    package com.java.genetic {
      class Main {
          {static} + main()
      }
    }
  }
  

  package  {
    package com.java.genetic {
      class Nucleotide {
          - symbol : String
          - name : String
          - familly : String
          + getSymbol()
          + getName()
          + getFamilly()
          + Nucleotide()
          + getApparie()
          + toString()
      }
    }
  }
  

  package  {
    package com.java.genetic {
      class Protein {
          - chain : List<Codon>
          + getChain()
          + Protein()
          + Protein()
          + setChain()
          + isProtein()
          + toString()
      }
    }
  }
  

  package  {
    package com.java.genetic {
      class RNA {
          - codonMap : Map<String, String>
          + RNA()
          + translate()
          + translate()
      }
    }
  }
  

  package  {
    package com.java.genetic {
      class Ribosome {
          - codonMap : Map<String, String>
          + Ribosome()
          + translate()
          - cut()
          - translate()
      }
    }
  }
  

  DNA -up-|> Brin
  DNAException +-down- PrintStreamOrWriter
  DNAException +-down- SentinelHolder
  DNAException +-down- WrappedPrintStream
  DNAException +-down- WrappedPrintWriter
  DNARepository o-- DNA : dna
  RNA -up-|> Brin


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
